# emwy

./: .gitignore  AGENTS.md  Brewfile  CLAUDE.md  EMWY_YAML_v1_SPEC.md  EMWY_YAML_v2_SPEC.md  MANIFEST.in  PYTHON_STYLE.md  README.md  emwy.py  emwy_cli.py  emwy_tui.py  pip_requirements-dev.txt  pip_requirements.txt  pyproject.toml  source_me.sh
docs/: ARCHITECTURE.md  CHANGELOG.md  CLAUDE_HOOK_USAGE_GUIDE.md  CLI.md  CODE_ARCHITECTURE.md  CONTRIBUTING.md  COOKBOOK.md  DEBUGGING.md  DEVELOPMENT.md  EMWY_TOOLS_MODULE_LAYOUT.md  EMWY_YAML_v1_SPEC.md  EMWY_YAML_v2_SPEC.md  EXPORT_MLT_XML_SPEC.md  FAQ.md  FILE_STRUCTURE.md  FORMAT.md  IMPORT_MLT_XML_SPEC.md  INSTALL.md  MARKDOWN_STYLE.md  MLT_INTEROP.md  RELEASE_HISTORY.md  REPO_STYLE.md  ROADMAP.md  SECURITY.md  SHOTCUT.md  STABILIZATION_TOOL_PLAN.md  TODO.md  TOOLS.md  TRACK_RUNNER_ANALYZE_AND_ENCODE.md  TRACK_RUNNER_CROP_PATH_FINDINGS.md  TRACK_RUNNER_DESIGN.md  TRACK_RUNNER_EXPERIMENT_HISTORY.md  TRACK_RUNNER_HISTORY.md  TRACK_RUNNER_KEYBINDINGS.md  TRACK_RUNNER_V3_SPEC.md  TRACK_RUNNER_YAML_CONFIG.md  USAGE.md
emwy_tools/: README.md  frame_reader.py  run_tool.py  tools_common.py
emwylib/: ffmpeglib.py  medialib.py  soxlib.py  titlecard.py  transforms.py
samples/: gangnam.emwy.yaml  gangnam.yml  runGangnam.sh  runGangnam_v2.sh  secret_of_51.emwy.yaml
tests/: conftest.py  fix_ascii_compliance.py  font_utils.py  render_titlecard.py  run_pyflakes.sh  test_emwy_yaml_writer.py  test_enabled_entries.py  test_ffmpeg_overlays.py  test_font_usage.py  test_indentation.py  test_integration_render.py  test_key_input.py  (+9 more)
(+120 files in other folders)
